# Adapting-the-GACT-X-Aligner-to-Accelerate-Minimap2-in-an-FPGA-Cloud-Instance

./: CMakeLists.txt  README.md  gactx.cpp  ksw2_extd2_sse.c  main_old.cpp  minimap.h  params.cfg  script_start.sh
Darwin-WGA_parallelized/: script_start.sh
Darwin-WGA_parallelized/scripts/: create_GACTX.hw.sh  create_xo.sh
Darwin-WGA_parallelized/src/hdl/GACTX/: GACTX_Array.v  GACTX_ArrayWrapper.v  GACTX_Kernel.sv  GACTX_KernelControl.sv
Darwin-WGA_parallelized/src/host/GACTX/: main.cpp  main_old.cpp
Minimap2_accelerated/: align.c  chain.c  gactx.cpp  ksw2.h  main.cpp
